# diff_syntax

./: CMakeLists.txt  classes.cpp  enum.cpp  functions.cpp  main.cpp  namespaces.cpp  variable.cpp
